Add Mockito version compatible with Java 25